Fix spacing around anchor tag in resume section

--- a/css/site.scss
+++ b/css/site.scss
@@ -61,6 +61,10 @@ body {
 
 .resume {
   background-color: $pink;
+
+  & > a {
+    color: $dark-pink;
+  }
 }
 
 .contact {
